--- a/question.html
+++ b/question.html
@@ -38,7 +38,7 @@
 			<div class="content">
 				<div class="title">您好，请完成安全验证！( ^.  w .^ )</div>
 				
-				<a href="#" target="_blank"><img src="https://s1.ax1x.com/2020/06/17/NVVVL4.gif" ></a>
+				<a href="#" target="_blank"><img src="https://s1.ax1x.com/2020/06/17/NVZAht.gif" ></a>
 				<p>::CAPTCHA_BOX::</p>
 				<small>若无法正常显示验证码，请关闭广告拦截软件!</small>
 			</div>
