--- a/502.html
+++ b/502.html
@@ -39,7 +39,7 @@
 			<div class="content">
 				<div class="title">网站暂时维护中，请等待恢复</div>
 				
-				<a href="#" target="_blank"><img src="https://i.loli.net/2020/05/24/MVOPxTyh8C1r4og.gif" ></a>
+				<a href="#" target="_blank"><img src="https://s1.ax1x.com/2020/06/17/NVZAht.gif" ></a>
 				<p>::CLOUDFLARE_ERROR_500S_BOX::</p>
 			<p><small>由Cloudflare与Baidu CDN Network提供网站安全保护</small></p>
 			<p><small>--This Page was coded by Hypeneko--</small></p>
