--- a/question.html
+++ b/question.html
@@ -38,9 +38,8 @@
 			<div class="content">
 				<div class="title">您好，请完成安全验证！( ^.  w .^ )</div>
 				
-				<a href="#" target="_blank"><img src="https://s1.ax1x.com/2020/06/17/NVZAht.gif" ></a>
+				<img src="https://s1.ax1x.com/2023/02/20/pSOHctK.png" alt="pSOHctK.png" border="0" />
 				<p>::CAPTCHA_BOX::</p>
-				<small>若无法正常显示验证码，请关闭广告拦截软件!</small>
 				<p><small>该网站正在应用安全验证以验证您不是机器人，以此来防御自动式网络攻击</small></p>
 			</div>
 			<p><small>由Cloudflare与Baidu CDN Network提供安全保护</small></p>
