--- a/ban.html
+++ b/ban.html
@@ -1,7 +1,9 @@
 
 <html>
 	<head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" />
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>您被拦截了！( ^.  w .^ )</title>
 
 		<style>
